GET byUserId done incl. exceptionhandling
